tests/vrml97/good/route-referencing-current-node.wrl
#VRML V2.0 utf8
DEF G1 Group {}
DEF G2 Group {
  ROUTE G1.children TO G2.children
}
