tests/vrml97/bad/is-outside-proto.wrl
#VRML V2.0 utf8
Group {
  children IS foo
}
